fix align in hero

--- a/style/stye.css
+++ b/style/stye.css
@@ -1,6 +1,7 @@
 /* font-family: 'Arimo', sans-serif;
 font-family: 'Inter', sans-serif;
-font-family: 'Rubik', sans-serif; */
+font-family: 'Rubik', sans-serif; 
+font-family: "Saira", sans-serif; */
 
 *,
 *::after,
@@ -44,12 +45,15 @@ body {
 .header__wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 2rem;
 }
 
 .logo {
-  width: 166.667px;
-  height: 30px;
+  /* width: 166.67px;
+  height: 30px; */
+  width: 166.67px;
+  height: 36px;
   display: inline-block;
 }
 
@@ -84,7 +88,7 @@ body {
   font-family: "Arimo", sans-serif;
   font-size: 1.6rem;
   font-weight: 700;
-  line-height: 160%;
+  line-height: 25.6px;
 }
 
 .navbar__item:hover {
@@ -96,9 +100,6 @@ body {
   color: inherit;
 }
 
-/* .main {
-} */
-
 .hero {
   padding-top: 16.8rem;
   min-height: 100vh;
@@ -106,11 +107,9 @@ body {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
-  /* display: flex; */
 }
 
 .hero__wrapper {
-  /* flex-grow: 1; */
   position: relative;
 }
 
@@ -129,12 +128,12 @@ body {
 
 .hero__title {
   color: #29323f;
-  font-family: "Rubik", sans-serif;
+  font-family: "Saira", sans-serif;
   font-size: 5rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 120%;
   text-align: left;
-  margin-bottom: 3rem;
+  margin-bottom: 1.7rem;
   max-width: 432px;
 }
 
@@ -143,7 +142,7 @@ body {
   font-family: "Arimo", sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
-  line-height: 160%;
+  line-height: 25.6px;
   text-align: left;
   margin-bottom: 4rem;
   max-width: 330px;
@@ -225,8 +224,8 @@ input::placeholder {
   text-align: center;
   font-family: "Arimo", sans-serif;
   font-size: 1.6rem;
-  font-weight: 700;
-  line-height: 160%;
+  font-weight: 600;
+  line-height: 25.6px;
   outline: none;
   cursor: pointer;
 }
@@ -247,7 +246,7 @@ input::placeholder {
   height: 48px;
   position: absolute;
   left: 16px;
-  bottom: -30%;
+  bottom: -52%;
   border-radius: 50%;
 }
 
@@ -297,15 +296,14 @@ input::placeholder {
 
 .section-investors {
   background-color: #f8f8f8;
-  padding-top: 1rem;
   padding-bottom: 5.1rem;
 }
 
 .section-investors__title {
   color: #29323f;
-  font-family: "Rubik", sans-serif;
+  font-family: "Saira", sans-serif;
   font-size: 3.8rem;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 120%;
   margin-bottom: 4rem;
 }
@@ -321,7 +319,7 @@ input::placeholder {
 
 .investors {
   display: flex;
-  gap: 5.6rem;
+  gap: 8.2rem;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -337,13 +335,10 @@ input::placeholder {
   }
 }
 
-/* .investors__logo {
-  flex: 0 0 calc(25% - 4.2rem);
-} */
-
 .investors__item {
   width: auto;
-  height: 43.99px;
+  max-height: 44px;
+  height: 100%;
 }
 
 @media screen and (max-width: 760px) {
@@ -362,20 +357,20 @@ input::placeholder {
 
 .section-call-to-try__wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 8200px) {
-  /* .section-call-to-try__wrapper {
+/* @media screen and (max-width: 8200px) {
+  .section-call-to-try__wrapper {
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 3rem;
-  } */
-}
+  }
+} */
 
 .customer-img {
   width: 100%;
@@ -383,6 +378,7 @@ input::placeholder {
   height: 0;
   padding-bottom: 41%;
   position: relative;
+  margin-left: 70px;
 }
 
 @media screen and (max-width: 820px) {
@@ -408,6 +404,7 @@ input::placeholder {
   max-width: 40%;
   width: 420px;
   flex-shrink: 1;
+  margin-right: 12px;
 }
 
 @media screen and (max-width: 820px) {
@@ -774,8 +771,12 @@ input::placeholder {
   line-height: 160%;
 }
 
-.footer__navbar {
+.footer-navbar {
   flex: 0 0 (50% - 2rem);
+}
+
+.footer-navbar__list {
+  gap: 5.6rem;
 }
 
 @media screen and (max-width: 760px) {
@@ -784,7 +785,7 @@ input::placeholder {
     margin-bottom: 4rem;
   }
 
-  .footer__navbar {
+  .footer-navbar {
     order: 2;
     margin-bottom: 4rem;
   }
